--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <p>Do you want to play music ?</p>
               <div id="checkbox">
                 <input type="checkbox" id="hand" name="hand">
-                <label for="hand">Check to play with your own ✊ (need camera permissions)</label>
+                <label for="hand">Check to play with your closed hand ✊ (need camera permissions)</label>
               </div>
               <button onclick="init()">Go !</button>
           </div>
